google_cloud/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    component: api-pod
spec:
  containers:
    - name: api-con
      image: gcr.io/simplicate-sparrow-project/api-small
      livenessProbe:
          httpGet:
            path: /health/alive
            port: 80
      readinessProbe: 
          httpGet:
            path: /health/ready
            port: 80
      ports:
        - containerPort: 80
          name: api-port
