google_cloud/api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api
spec:
  containers:
    - image: simplicate/sparrow-api
      name: sparrow-api
      ports:
        - containerPort: 80
          name: api
