google_cloud/database-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sparrow-db
spec:
  containers:
    - name: sparrow-db
      image: postgres
      ports:
        - containerPort: 5432
          name: sparrow-db
