google_cloud/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  labels:
    component: db-pod
spec:
  containers:
    - name: db-con
      image: postgres
      ports:
        - containerPort: 5432
          name: db-port
