google_cloud/postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: databases
spec:
  containers:
    - name: sparrowdb
      image: postgres
      ports:
        - containerPort: 5432
