google_cloud/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparrow-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: sparrow-api
