google_cloud/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparrow-db
spec:
  ports:
    - port: 5432
  selector:
    name: sparrow-db
