google_cloud/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: databases
spec:
  ports:
    - port: 5432
  selector:
    name: sparrowdb
