google_cloud/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    component: web-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: web-port
      protocol: TCP
  selector:
    component: web-pod
